# dev-hell

./: README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/src/: main.py
backend/src/_1_domain/: data_submission.py  permission.py  role.py  user.py
backend/src/_5_controllers/: health_check.py  hello_world.py
backend/src/shared/: container.py  str.py
backend/tests/_1_domain/: test_user.py
