[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jkf16m",email = "jkf16m@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "black (>=25.11.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
